# CXX-2semester

./: .gitignore
1. Cmake and Git/: CMakeLists.txt
1. Cmake and Git/file/: run.txt
1. Cmake and Git/inc/: func.hpp
1. Cmake and Git/src/: func.cpp
2. First class/: CMakeLists.txt  main.cpp
2. First class/src/: Parallelogram.cpp
3. Copy of strings/: CMakeLists.txt  main.cpp
4. Creating shapes with SFML/: CMakeLists.txt  main.cpp
4. Creating shapes with SFML/inc/: circle.hpp  game.hpp  line.hpp  rectangle.hpp  triangle.hpp
4. Creating shapes with SFML/src/: circle.cpp  game.cpp  line.cpp  rectangle.cpp  triangle.cpp
5. Shapes movement/: CMakeLists.txt  main.cpp
5. Shapes movement/inc/: circle.hpp
5. Shapes movement/src/: circle.cpp  game.cpp
6. Shapes and player movement/: CMakeLists.txt  main.cpp
6. Shapes and player movement/inc/: circle.hpp  game.hpp  ship.hpp
6. Shapes and player movement/src/: circle.cpp  game.cpp  ship.cpp
7. Bullets/inc/: bullet.hpp  circle.hpp  game.hpp  ship.hpp
7. Bullets/src/: bullet.cpp  circle.cpp  game.cpp  ship.cpp
8. Enemies/: CMakeLists.txt  main.cpp
8. Enemies/inc/: Destroyer.hpp  Enemies.hpp  SpaceObject.hpp  UFO.hpp  asteroid.hpp  bullet.hpp  comet.hpp  game.hpp  ship.hpp
8. Enemies/src/: Enemies.cpp  SpaceObject.cpp  game.cpp  ship.cpp
Lab_1/: CMakeLists.txt  main.cpp
Lab_1/file/: run.txt
Lab_1/inc/: func.hpp
Lab_1/src/: func.cpp
Lab_2/: CMakeLists.txt  main.cpp
Lab_2/inc/: Parallelogram.hpp  func.hpp
Lab_2/src/: func.cpp
Lab_3/src/: String.cpp
